# lisper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  builtin.c  builtin.h  common.h  eval.c  eval.h  grammar.c  grammar.h  lisper.c  lval.c  lval.h  meta.h  prompt.c
.github/workflows/: cmake-multi-platform.yml
docs/: manual.md
examples/: args.lspr  factorial.lpr  factorial.lspr  file_ops.lisper  hello.lspr  stdlib.lspr
lib/linenoise/: CMakeLists.txt
linenoise/: gitversion
src/: builtin.c  builtin.h  compat_string.c  environment.c  environment.h  exec.c  exec.h  execute.c  execute.h  grammar.c  grammar.h  hashmap.c  hashmap.h  interpreter.c  interpreter.h  lenv.c  lenv.h  lenvironment.c  lenvironment.h  lisper.c  lisper.h  lisper_internal.h  lval.c  lval.h  lvalue.c  lvalue.h  main.c  mempool.c  mempool.h  mpc.c  mpc.h  prgparams.c  prgparams.h  prompt.c  prompt.h  strtools.c  strtools.h  value.c  value.h
src/liblisper/: CMakeLists.txt  builtin.c  grammar.c  grammar.h  lisper.c  mpc.c  mpc.h
src/liblisper/compat/: string.c  string.h
src/liblisper/include/: lisper.h
src/liblisper/value/: lfunction.h  lvalue.h  print.c  print.h  transformers.c
src/value/: constructors.c  constructors.h  lcells.h  lfile.h  lvalue.h  print.c  transformers.c  transformers.h
